<resources>
    <string name="app_name">Edu</string>
    <string name="are_you_a_student_seeking_knowledge">Are you a student seeking knowledge?</string>
    <string name="are_you_a_teacher_who_likes_to_volunteer">Are you a teacher who likes to volunteer?</string>
    <string name="apptopic">EduX</string>
    <string name="register_now">Register Now</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="maths">Maths</string>
    <string name="information_technology">Information technology</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_now">Join now</string>
    <string name="not_a_member">Not a member?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="contact_number">contact number</string>
    <string name="i_agree_to_terms_and_condtions">I agree to terms and condtions</string>
    <string name="grade">Grade</string>

    <string-array name="userType">
        <item></item>
        <item>Student</item>
        <item>Teacher</item>
        <item>Donator</item>
    </string-array>

    <string-array name="grades">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="add_a_blog_post">Add a blog post</string>
    <string name="enter_blog_topic_here">Enter blog topic here</string>
    <string name="type_your_blog_post_here">Type your blog post here</string>
    <string name="enter_author_name">Enter author name</string>
    <string name="add_post">Add post</string>
    <string name="blogs">Blogs</string>
    <string name="how_to_learn_english">How to learn English</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_exceptrum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Exceptrum.</string>
    <string name="the_seven_moons_of_maali">The Seven Moons Of Maali</string>
    <string name="contact_me">Contact me</string>
    <string name="_078_xxxxxxx">078-XXXXXXX</string>
    <string name="book_store">Book Store</string>
    <string name="share_your_old_books_with_others">Share your old books with others</string>
    <string name="teach_by_anjana_sir">teach by Anjana sir</string>
    <string name="teach_by_shehan_sir">teach by Shehan sir</string>
    <string name="course_overview">Course overview</string>
    <string name="subject">Subject :</string>
    <string name="maths">Maths</string>
    <string name="guide_by">Guide By:</string>
    <string name="anjana_dissanayake">Anjana Dissanayake</string>
    <string name="select_grade">Select grade</string>
    <string name="monday">Monday</string>
    <string name="on">On</string>
    <string name="_2_30_pm_5_30_pm">2:30 pm-5:30 pm</string>
    <string name="you_can_donate_me_if_you_like">You can donate me if you like</string>
    <string name="acoount_no">Acoount No :</string>
    <string name="bank_branch">Bank branch :</string>
    <string name="malabe_boc">Malabe BOC</string>
    <string name="contact">Contact :</string>
    <string name="_078_xxxxxxx">078-XXXXXXX</string>
    <string name="create_a_donor_account">Create a donor account</string>
    <string name="email_address">Email address</string>
    <string name="qulification">Qulification</string>
    <string name="add_a_book">Add a book</string>
    <string name="add_blog_post">Add blog post</string>
    <string name="update_profile">Update profile</string>
    <string name="hi_dean">Hi Dean!</string>
    <string name="edux">EduX</string>
    <string name="are_you_a_student_seeking_knowledge">Are you a student seeking knowledge?</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="your_courses">Your courses</string>
    <string name="book_store">Book Store</string>
    <string name="donate">Donate</string>
    <string name="add_blog_post">Add blog post</string>
    <string name="update_profile">Update profile</string>
    <string name="your_progress">Your progress</string>
    <string name="hi_shane">Hi Shane!</string>
    <string name="level">Level :</string>
    <string name="gold">Gold</string>
    <string name="overall_points">Overall Points :</string>
    <string name="quiz_points">Quiz Points :</string>
    <string name="your_progress">Your progress</string>
    <string name="keep_learning_for_levelup">keep learning for levelup</string>
    <string name="view_classes">View classes</string>
    <string name="add_quiz">Add quiz</string>
    <string name="add_blog_post">Add blog post</string>
    <string name="update_profile">Update profile</string>
    <string name="your_progress">Your progress</string>
    <string name="have_a_great_day_sehan">Have a great day Sehan</string>
    <string name="student_count">Student count :</string>
    <string name="class_count">Class count :</string>
    <string name="quiz_count">Quiz count</string>
    <string name="your_progress">Your progress</string>
    <string name="email_address">Email address</string>
    <string name="create_a_teacher_account">Create a teacher account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="emailAdress">Email address</string>
    <string name="leave_comment_here">Leave comment here</string>
    <string name="add_comment">Add Comment</string>
    <string name="count_of_book_donations">Count of book donations :</string>
    <string name="_5">5</string>
    <string name="donate_money">Donate money</string>
    <string name="signout">Signout</string>

</resources>