<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="395dp"
        android:layout_height="307dp"
        android:layout_marginBottom="61dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_background" />

    <Button
        android:id="@+id/login2"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/btn1"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/pgrey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/text_veiw_edit"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/btn2"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        app:layout_constraintBottom_toTopOf="@+id/login2"
        app:layout_constraintEnd_toEndOf="@+id/login2"
        app:layout_constraintStart_toStartOf="@+id/login2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/forgot_password"
        android:textColor="@color/Pcolor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:text="@string/join_now"
        android:textColor="@color/fontBlue1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="80dp"
        android:text="@string/not_a_member"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_undraw_online_learning_re_qw08" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/oswald"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>