<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="286dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="663dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="253dp"
            android:layout_height="41dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:text="Create a teacher Account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/text_veiw_edit"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_account_box_24"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="237dp"
            android:layout_height="42dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="235dp"
            android:layout_height="46dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_call_24"
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/age"
            android:layout_width="235dp"
            android:layout_height="42dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextNumberSigned"
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_school_24"
            android:ems="10"
            android:hint="Qulification"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/password"
            android:layout_width="232dp"
            android:layout_height="39dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/rePassword"
            android:layout_width="226dp"
            android:layout_height="42dp"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn2"
            android:backgroundTint="#C4E0E0E0"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:ems="10"
            android:hint="@string/retype_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="75sp"
            android:layout_marginBottom="10sp"
            android:text="@string/i_agree_to_terms_and_condtions"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login3"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="75sp"
            android:background="@drawable/btn1"
            android:gravity="center"
            android:text="@string/register_now"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/pgrey"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>